<resources>
    <string name="app_name">ChatBox</string>
    <string name="contact_photo">contact photo</string>
    <string name="name">Name</string>
    <string name="last_message">last Message</string>
    <string name="next">next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign UP</string>
    <string name="password">password</string>
    <string name="sign_in">Sign IN</string>
    <string name="phone">Phone</string>
    <string name="otp">otp</string>
    <string name="submit">Submit</string>
    <string name="add_contact">Add Contact</string>
</resources>
