<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="20dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<ImageView
    android:id="@+id/user_row_iv_photo"
    android:layout_width="50dp"
    android:layout_margin="1dp"
    android:layout_height="match_parent"
    android:src="@android:drawable/ic_menu_camera"
    android:contentDescription="@string/contact_photo" />
    <LinearLayout
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_row_tv_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <TextView
            android:id="@+id/user_row_tv_last_message"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_message"/>
    </LinearLayout></LinearLayout>
</androidx.cardview.widget.CardView>